project/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> <empty>
Rule 3     statements -> statements statement
Rule 4     statement -> expression ;
Rule 5     statement -> print_statement ;
Rule 6     statement -> declaration ;
Rule 7     statement -> block
Rule 8     statement -> if_statement
Rule 9     statement -> while_statement
Rule 10    statement -> function_statement
Rule 11    statement -> ;
Rule 12    statement -> FLOW_BREAK ;
Rule 13    statement -> RETURN_KEYWORD expression ;
Rule 14    if_statement -> FLOW_IF ( expression ) statement
Rule 15    if_statement -> FLOW_IF ( expression ) statement FLOW_ELSE statement
Rule 16    while_statement -> FLOW_WHILE ( expression ) statement
Rule 17    function_statement -> DEFINE_KEYWORD type ID ( comma_sep_args ) statement
Rule 18    comma_sep_args -> <empty>
Rule 19    comma_sep_args -> simple_declaration
Rule 20    comma_sep_args -> comma_sep_args , simple_declaration
Rule 21    block -> { new_scope statements }
Rule 22    new_scope -> <empty>
Rule 23    print_statement -> COMMAND_PRINT ( non_empty_comma_sep_expr )
Rule 24    non_empty_comma_sep_expr -> expression
Rule 25    non_empty_comma_sep_expr -> non_empty_comma_sep_expr , expression
Rule 26    expression -> var_usage = expression
Rule 27    expression -> expression + expression
Rule 28    expression -> expression - expression
Rule 29    expression -> expression * expression
Rule 30    expression -> expression / expression
Rule 31    expression -> - expression
Rule 32    expression -> ! expression
Rule 33    expression -> var_usage ASSIGN_ADD expression
Rule 34    expression -> var_usage ASSIGN_SUB expression
Rule 35    expression -> var_usage ASSIGN_DIV expression
Rule 36    expression -> var_usage ASSIGN_MULT expression
Rule 37    expression -> expression COMP_EQU expression
Rule 38    expression -> expression COMP_NEQU expression
Rule 39    expression -> expression COMP_LTE expression
Rule 40    expression -> expression COMP_LESS expression
Rule 41    expression -> expression COMP_GTR expression
Rule 42    expression -> expression COMP_GTE expression
Rule 43    expression -> expression BOOL_AND expression
Rule 44    expression -> expression BOOL_OR expression
Rule 45    simple_declaration -> type ID
Rule 46    assign_declaration -> simple_declaration = expression
Rule 47    declaration -> simple_declaration
Rule 48    declaration -> assign_declaration
Rule 49    var_usage -> ID
Rule 50    expression -> var_usage
Rule 51    expression -> CHAR_LITERAL
Rule 52    expression -> VAL_LITERAL
Rule 53    expression -> ( expression )
Rule 54    type -> TYPE
Rule 55    expression -> COMMAND_RANDOM ( expression )
Rule 56    expression -> ID . ID ( )
Rule 57    statement -> ID . ID ( expression )
Rule 58    expression -> STRING_LITERAL
Rule 59    type -> ARRAY_KEYWORD ( TYPE )
Rule 60    var_usage -> ID [ expression ]
Rule 61    type -> STRING_KEYWORD

Terminals, with rules where they appear

!                    : 32
(                    : 14 15 16 17 23 53 55 56 57 59
)                    : 14 15 16 17 23 53 55 56 57 59
*                    : 29
+                    : 27
,                    : 20 25
-                    : 28 31
.                    : 56 57
/                    : 30
;                    : 4 5 6 11 12 13
=                    : 26 46
ARRAY_KEYWORD        : 59
ASSIGN_ADD           : 33
ASSIGN_DIV           : 35
ASSIGN_MULT          : 36
ASSIGN_SUB           : 34
BOOL_AND             : 43
BOOL_OR              : 44
CHAR_LITERAL         : 51
COMMAND_PRINT        : 23
COMMAND_RANDOM       : 55
COMP_EQU             : 37
COMP_GTE             : 42
COMP_GTR             : 41
COMP_LESS            : 40
COMP_LTE             : 39
COMP_NEQU            : 38
DEFINE_KEYWORD       : 17
FLOW_BREAK           : 12
FLOW_ELSE            : 15
FLOW_IF              : 14 15
FLOW_WHILE           : 16
ID                   : 17 45 49 56 56 57 57 60
RETURN_KEYWORD       : 13
STRING_KEYWORD       : 61
STRING_LITERAL       : 58
TYPE                 : 54 59
VAL_LITERAL          : 52
[                    : 60
]                    : 60
error                : 
{                    : 21
}                    : 21

Nonterminals, with rules where they appear

assign_declaration   : 48
block                : 7
comma_sep_args       : 17 20
declaration          : 6
expression           : 4 13 14 15 16 24 25 26 27 27 28 28 29 29 30 30 31 32 33 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 46 53 55 57 60
function_statement   : 10
if_statement         : 8
new_scope            : 21
non_empty_comma_sep_expr : 23 25
print_statement      : 5
program              : 0
simple_declaration   : 19 20 46 47
statement            : 3 14 15 15 16 17
statements           : 1 3 21
type                 : 17 45
var_usage            : 26 33 34 35 36 50
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> .
    (3) statements -> . statements statement

    ;               reduce using rule 2 (statements -> .)
    FLOW_BREAK      reduce using rule 2 (statements -> .)
    RETURN_KEYWORD  reduce using rule 2 (statements -> .)
    ID              reduce using rule 2 (statements -> .)
    -               reduce using rule 2 (statements -> .)
    !               reduce using rule 2 (statements -> .)
    CHAR_LITERAL    reduce using rule 2 (statements -> .)
    VAL_LITERAL     reduce using rule 2 (statements -> .)
    (               reduce using rule 2 (statements -> .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> .)
    STRING_LITERAL  reduce using rule 2 (statements -> .)
    COMMAND_PRINT   reduce using rule 2 (statements -> .)
    {               reduce using rule 2 (statements -> .)
    FLOW_IF         reduce using rule 2 (statements -> .)
    FLOW_WHILE      reduce using rule 2 (statements -> .)
    DEFINE_KEYWORD  reduce using rule 2 (statements -> .)
    TYPE            reduce using rule 2 (statements -> .)
    ARRAY_KEYWORD   reduce using rule 2 (statements -> .)
    STRING_KEYWORD  reduce using rule 2 (statements -> .)
    $end            reduce using rule 2 (statements -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . expression ;
    (5) statement -> . print_statement ;
    (6) statement -> . declaration ;
    (7) statement -> . block
    (8) statement -> . if_statement
    (9) statement -> . while_statement
    (10) statement -> . function_statement
    (11) statement -> . ;
    (12) statement -> . FLOW_BREAK ;
    (13) statement -> . RETURN_KEYWORD expression ;
    (57) statement -> . ID . ID ( expression )
    (26) expression -> . var_usage = expression
    (27) expression -> . expression + expression
    (28) expression -> . expression - expression
    (29) expression -> . expression * expression
    (30) expression -> . expression / expression
    (31) expression -> . - expression
    (32) expression -> . ! expression
    (33) expression -> . var_usage ASSIGN_ADD expression
    (34) expression -> . var_usage ASSIGN_SUB expression
    (35) expression -> . var_usage ASSIGN_DIV expression
    (36) expression -> . var_usage ASSIGN_MULT expression
    (37) expression -> . expression COMP_EQU expression
    (38) expression -> . expression COMP_NEQU expression
    (39) expression -> . expression COMP_LTE expression
    (40) expression -> . expression COMP_LESS expression
    (41) expression -> . expression COMP_GTR expression
    (42) expression -> . expression COMP_GTE expression
    (43) expression -> . expression BOOL_AND expression
    (44) expression -> . expression BOOL_OR expression
    (50) expression -> . var_usage
    (51) expression -> . CHAR_LITERAL
    (52) expression -> . VAL_LITERAL
    (53) expression -> . ( expression )
    (55) expression -> . COMMAND_RANDOM ( expression )
    (56) expression -> . ID . ID ( )
    (58) expression -> . STRING_LITERAL
    (23) print_statement -> . COMMAND_PRINT ( non_empty_comma_sep_expr )
    (47) declaration -> . simple_declaration
    (48) declaration -> . assign_declaration
    (21) block -> . { new_scope statements }
    (14) if_statement -> . FLOW_IF ( expression ) statement
    (15) if_statement -> . FLOW_IF ( expression ) statement FLOW_ELSE statement
    (16) while_statement -> . FLOW_WHILE ( expression ) statement
    (17) function_statement -> . DEFINE_KEYWORD type ID ( comma_sep_args ) statement
    (49) var_usage -> . ID
    (60) var_usage -> . ID [ expression ]
    (45) simple_declaration -> . type ID
    (46) assign_declaration -> . simple_declaration = expression
    (54) type -> . TYPE
    (59) type -> . ARRAY_KEYWORD ( TYPE )
    (61) type -> . STRING_KEYWORD

    $end            reduce using rule 1 (program -> statements .)
    ;               shift and go to state 31
    FLOW_BREAK      shift and go to state 6
    RETURN_KEYWORD  shift and go to state 8
    ID              shift and go to state 26
    -               shift and go to state 30
    !               shift and go to state 28
    CHAR_LITERAL    shift and go to state 18
    VAL_LITERAL     shift and go to state 12
    (               shift and go to state 17
    COMMAND_RANDOM  shift and go to state 15
    STRING_LITERAL  shift and go to state 20
    COMMAND_PRINT   shift and go to state 14
    {               shift and go to state 32
    FLOW_IF         shift and go to state 9
    FLOW_WHILE      shift and go to state 7
    DEFINE_KEYWORD  shift and go to state 19
    TYPE            shift and go to state 33
    ARRAY_KEYWORD   shift and go to state 21
    STRING_KEYWORD  shift and go to state 25

    print_statement                shift and go to state 24
    while_statement                shift and go to state 3
    type                           shift and go to state 16
    function_statement             shift and go to state 13
    declaration                    shift and go to state 4
    simple_declaration             shift and go to state 23
    var_usage                      shift and go to state 5
    if_statement                   shift and go to state 22
    statement                      shift and go to state 29
    expression                     shift and go to state 11
    assign_declaration             shift and go to state 27
    block                          shift and go to state 10

state 3

    (9) statement -> while_statement .

    ;               reduce using rule 9 (statement -> while_statement .)
    FLOW_BREAK      reduce using rule 9 (statement -> while_statement .)
    RETURN_KEYWORD  reduce using rule 9 (statement -> while_statement .)
    ID              reduce using rule 9 (statement -> while_statement .)
    -               reduce using rule 9 (statement -> while_statement .)
    !               reduce using rule 9 (statement -> while_statement .)
    CHAR_LITERAL    reduce using rule 9 (statement -> while_statement .)
    VAL_LITERAL     reduce using rule 9 (statement -> while_statement .)
    (               reduce using rule 9 (statement -> while_statement .)
    COMMAND_RANDOM  reduce using rule 9 (statement -> while_statement .)
    STRING_LITERAL  reduce using rule 9 (statement -> while_statement .)
    COMMAND_PRINT   reduce using rule 9 (statement -> while_statement .)
    {               reduce using rule 9 (statement -> while_statement .)
    FLOW_IF         reduce using rule 9 (statement -> while_statement .)
    FLOW_WHILE      reduce using rule 9 (statement -> while_statement .)
    DEFINE_KEYWORD  reduce using rule 9 (statement -> while_statement .)
    TYPE            reduce using rule 9 (statement -> while_statement .)
    ARRAY_KEYWORD   reduce using rule 9 (statement -> while_statement .)
    STRING_KEYWORD  reduce using rule 9 (statement -> while_statement .)
    $end            reduce using rule 9 (statement -> while_statement .)
    }               reduce using rule 9 (statement -> while_statement .)
    FLOW_ELSE       reduce using rule 9 (statement -> while_statement .)


state 4

    (6) statement -> declaration . ;

    ;               shift and go to state 34


state 5

    (26) expression -> var_usage . = expression
    (33) expression -> var_usage . ASSIGN_ADD expression
    (34) expression -> var_usage . ASSIGN_SUB expression
    (35) expression -> var_usage . ASSIGN_DIV expression
    (36) expression -> var_usage . ASSIGN_MULT expression
    (50) expression -> var_usage .

    =               shift and go to state 39
    ASSIGN_ADD      shift and go to state 36
    ASSIGN_SUB      shift and go to state 38
    ASSIGN_DIV      shift and go to state 35
    ASSIGN_MULT     shift and go to state 37
    )               reduce using rule 50 (expression -> var_usage .)
    +               reduce using rule 50 (expression -> var_usage .)
    -               reduce using rule 50 (expression -> var_usage .)
    *               reduce using rule 50 (expression -> var_usage .)
    /               reduce using rule 50 (expression -> var_usage .)
    COMP_EQU        reduce using rule 50 (expression -> var_usage .)
    COMP_NEQU       reduce using rule 50 (expression -> var_usage .)
    COMP_LTE        reduce using rule 50 (expression -> var_usage .)
    COMP_LESS       reduce using rule 50 (expression -> var_usage .)
    COMP_GTR        reduce using rule 50 (expression -> var_usage .)
    COMP_GTE        reduce using rule 50 (expression -> var_usage .)
    BOOL_AND        reduce using rule 50 (expression -> var_usage .)
    BOOL_OR         reduce using rule 50 (expression -> var_usage .)
    ;               reduce using rule 50 (expression -> var_usage .)
    ,               reduce using rule 50 (expression -> var_usage .)
    ]               reduce using rule 50 (expression -> var_usage .)


state 6

    (12) statement -> FLOW_BREAK . ;

    ;               shift and go to state 40


state 7

    (16) while_statement -> FLOW_WHILE . ( expression ) statement

    (               shift and go to state 41


state 8

    (13) statement -> RETURN_KEYWORD . expression ;
    (26) expression -> . var_usage = expression
    (27) expression -> . expression + expression
    (28) expression -> . expression - expression
    (29) expression -> . expression * expression
    (30) expression -> . expression / expression
    (31) expression -> . - expression
    (32) expression -> . ! expression
    (33) expression -> . var_usage ASSIGN_ADD expression
    (34) expression -> . var_usage ASSIGN_SUB expression
    (35) expression -> . var_usage ASSIGN_DIV expression
    (36) expression -> . var_usage ASSIGN_MULT expression
    (37) expression -> . expression COMP_EQU expression
    (38) expression -> . expression COMP_NEQU expression
    (39) expression -> . expression COMP_LTE expression
    (40) expression -> . expression COMP_LESS expression
    (41) expression -> . expression COMP_GTR expression
    (42) expression -> . expression COMP_GTE expression
    (43) expression -> . expression BOOL_AND expression
    (44) expression -> . expression BOOL_OR expression
    (50) expression -> . var_usage
    (51) expression -> . CHAR_LITERAL
    (52) expression -> . VAL_LITERAL
    (53) expression -> . ( expression )
    (55) expression -> . COMMAND_RANDOM ( expression )
    (56) expression -> . ID . ID ( )
    (58) expression -> . STRING_LITERAL
    (49) var_usage -> . ID
    (60) var_usage -> . ID [ expression ]

    -               shift and go to state 30
    !               shift and go to state 28
    CHAR_LITERAL    shift and go to state 18
    VAL_LITERAL     shift and go to state 12
    (               shift and go to state 17
    COMMAND_RANDOM  shift and go to state 15
    ID              shift and go to state 43
    STRING_LITERAL  shift and go to state 20

    var_usage                      shift and go to state 5
    expression                     shift and go to state 42

state 9

    (14) if_statement -> FLOW_IF . ( expression ) statement
    (15) if_statement -> FLOW_IF . ( expression ) statement FLOW_ELSE statement

    (               shift and go to state 44


state 10

    (7) statement -> block .

    ;               reduce using rule 7 (statement -> block .)
    FLOW_BREAK      reduce using rule 7 (statement -> block .)
    RETURN_KEYWORD  reduce using rule 7 (statement -> block .)
    ID              reduce using rule 7 (statement -> block .)
    -               reduce using rule 7 (statement -> block .)
    !               reduce using rule 7 (statement -> block .)
    CHAR_LITERAL    reduce using rule 7 (statement -> block .)
    VAL_LITERAL     reduce using rule 7 (statement -> block .)
    (               reduce using rule 7 (statement -> block .)
    COMMAND_RANDOM  reduce using rule 7 (statement -> block .)
    STRING_LITERAL  reduce using rule 7 (statement -> block .)
    COMMAND_PRINT   reduce using rule 7 (statement -> block .)
    {               reduce using rule 7 (statement -> block .)
    FLOW_IF         reduce using rule 7 (statement -> block .)
    FLOW_WHILE      reduce using rule 7 (statement -> block .)
    DEFINE_KEYWORD  reduce using rule 7 (statement -> block .)
    TYPE            reduce using rule 7 (statement -> block .)
    ARRAY_KEYWORD   reduce using rule 7 (statement -> block .)
    STRING_KEYWORD  reduce using rule 7 (statement -> block .)
    $end            reduce using rule 7 (statement -> block .)
    }               reduce using rule 7 (statement -> block .)
    FLOW_ELSE       reduce using rule 7 (statement -> block .)


state 11

    (4) statement -> expression . ;
    (27) expression -> expression . + expression
    (28) expression -> expression . - expression
    (29) expression -> expression . * expression
    (30) expression -> expression . / expression
    (37) expression -> expression . COMP_EQU expression
    (38) expression -> expression . COMP_NEQU expression
    (39) expression -> expression . COMP_LTE expression
    (40) expression -> expression . COMP_LESS expression
    (41) expression -> expression . COMP_GTR expression
    (42) expression -> expression . COMP_GTE expression
    (43) expression -> expression . BOOL_AND expression
    (44) expression -> expression . BOOL_OR expression

    ;               shift and go to state 45
    +               shift and go to state 53
    -               shift and go to state 55
    *               shift and go to state 47
    /               shift and go to state 54
    COMP_EQU        shift and go to state 56
    COMP_NEQU       shift and go to state 52
    COMP_LTE        shift and go to state 46
    COMP_LESS       shift and go to state 48
    COMP_GTR        shift and go to state 57
    COMP_GTE        shift and go to state 49
    BOOL_AND        shift and go to state 50
    BOOL_OR         shift and go to state 51


state 12

    (52) expression -> VAL_LITERAL .

    )               reduce using rule 52 (expression -> VAL_LITERAL .)
    +               reduce using rule 52 (expression -> VAL_LITERAL .)
    -               reduce using rule 52 (expression -> VAL_LITERAL .)
    *               reduce using rule 52 (expression -> VAL_LITERAL .)
    /               reduce using rule 52 (expression -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 52 (expression -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 52 (expression -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 52 (expression -> VAL_LITERAL .)
    COMP_LESS       reduce using rule 52 (expression -> VAL_LITERAL .)
    COMP_GTR        reduce using rule 52 (expression -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 52 (expression -> VAL_LITERAL .)
    BOOL_AND        reduce using rule 52 (expression -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 52 (expression -> VAL_LITERAL .)
    ;               reduce using rule 52 (expression -> VAL_LITERAL .)
    ,               reduce using rule 52 (expression -> VAL_LITERAL .)
    ]               reduce using rule 52 (expression -> VAL_LITERAL .)


state 13

    (10) statement -> function_statement .

    ;               reduce using rule 10 (statement -> function_statement .)
    FLOW_BREAK      reduce using rule 10 (statement -> function_statement .)
    RETURN_KEYWORD  reduce using rule 10 (statement -> function_statement .)
    ID              reduce using rule 10 (statement -> function_statement .)
    -               reduce using rule 10 (statement -> function_statement .)
    !               reduce using rule 10 (statement -> function_statement .)
    CHAR_LITERAL    reduce using rule 10 (statement -> function_statement .)
    VAL_LITERAL     reduce using rule 10 (statement -> function_statement .)
    (               reduce using rule 10 (statement -> function_statement .)
    COMMAND_RANDOM  reduce using rule 10 (statement -> function_statement .)
    STRING_LITERAL  reduce using rule 10 (statement -> function_statement .)
    COMMAND_PRINT   reduce using rule 10 (statement -> function_statement .)
    {               reduce using rule 10 (statement -> function_statement .)
    FLOW_IF         reduce using rule 10 (statement -> function_statement .)
    FLOW_WHILE      reduce using rule 10 (statement -> function_statement .)
    DEFINE_KEYWORD  reduce using rule 10 (statement -> function_statement .)
    TYPE            reduce using rule 10 (statement -> function_statement .)
    ARRAY_KEYWORD   reduce using rule 10 (statement -> function_statement .)
    STRING_KEYWORD  reduce using rule 10 (statement -> function_statement .)
    $end            reduce using rule 10 (statement -> function_statement .)
    }               reduce using rule 10 (statement -> function_statement .)
    FLOW_ELSE       reduce using rule 10 (statement -> function_statement .)


state 14

    (23) print_statement -> COMMAND_PRINT . ( non_empty_comma_sep_expr )

    (               shift and go to state 58


state 15

    (55) expression -> COMMAND_RANDOM . ( expression )

    (               shift and go to state 59


state 16

    (45) simple_declaration -> type . ID

    ID              shift and go to state 60


state 17

    (53) expression -> ( . expression )
    (26) expression -> . var_usage = expression
    (27) expression -> . expression + expression
    (28) expression -> . expression - expression
    (29) expression -> . expression * expression
    (30) expression -> . expression / expression
    (31) expression -> . - expression
    (32) expression -> . ! expression
    (33) expression -> . var_usage ASSIGN_ADD expression
    (34) expression -> . var_usage ASSIGN_SUB expression
    (35) expression -> . var_usage ASSIGN_DIV expression
    (36) expression -> . var_usage ASSIGN_MULT expression
    (37) expression -> . expression COMP_EQU expression
    (38) expression -> . expression COMP_NEQU expression
    (39) expression -> . expression COMP_LTE expression
    (40) expression -> . expression COMP_LESS expression
    (41) expression -> . expression COMP_GTR expression
    (42) expression -> . expression COMP_GTE expression
    (43) expression -> . expression BOOL_AND expression
    (44) expression -> . expression BOOL_OR expression
    (50) expression -> . var_usage
    (51) expression -> . CHAR_LITERAL
    (52) expression -> . VAL_LITERAL
    (53) expression -> . ( expression )
    (55) expression -> . COMMAND_RANDOM ( expression )
    (56) expression -> . ID . ID ( )
    (58) expression -> . STRING_LITERAL
    (49) var_usage -> . ID
    (60) var_usage -> . ID [ expression ]

    -               shift and go to state 30
    !               shift and go to state 28
    CHAR_LITERAL    shift and go to state 18
    VAL_LITERAL     shift and go to state 12
    (               shift and go to state 17
    COMMAND_RANDOM  shift and go to state 15
    ID              shift and go to state 43
    STRING_LITERAL  shift and go to state 20

    var_usage                      shift and go to state 5
    expression                     shift and go to state 61

state 18

    (51) expression -> CHAR_LITERAL .

    )               reduce using rule 51 (expression -> CHAR_LITERAL .)
    +               reduce using rule 51 (expression -> CHAR_LITERAL .)
    -               reduce using rule 51 (expression -> CHAR_LITERAL .)
    *               reduce using rule 51 (expression -> CHAR_LITERAL .)
    /               reduce using rule 51 (expression -> CHAR_LITERAL .)
    COMP_EQU        reduce using rule 51 (expression -> CHAR_LITERAL .)
    COMP_NEQU       reduce using rule 51 (expression -> CHAR_LITERAL .)
    COMP_LTE        reduce using rule 51 (expression -> CHAR_LITERAL .)
    COMP_LESS       reduce using rule 51 (expression -> CHAR_LITERAL .)
    COMP_GTR        reduce using rule 51 (expression -> CHAR_LITERAL .)
    COMP_GTE        reduce using rule 51 (expression -> CHAR_LITERAL .)
    BOOL_AND        reduce using rule 51 (expression -> CHAR_LITERAL .)
    BOOL_OR         reduce using rule 51 (expression -> CHAR_LITERAL .)
    ;               reduce using rule 51 (expression -> CHAR_LITERAL .)
    ,               reduce using rule 51 (expression -> CHAR_LITERAL .)
    ]               reduce using rule 51 (expression -> CHAR_LITERAL .)


state 19

    (17) function_statement -> DEFINE_KEYWORD . type ID ( comma_sep_args ) statement
    (54) type -> . TYPE
    (59) type -> . ARRAY_KEYWORD ( TYPE )
    (61) type -> . STRING_KEYWORD

    TYPE            shift and go to state 33
    ARRAY_KEYWORD   shift and go to state 21
    STRING_KEYWORD  shift and go to state 25

    type                           shift and go to state 62

state 20

    (58) expression -> STRING_LITERAL .
